--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -49,12 +49,52 @@
 }
 
 .front{
-    background: linear-gradient(45deg,#80ffff, #00ffff, #00ffff);
+    background: rgb(240, 248, 250);
+    /* linear-gradient(45deg,#80ffff, #00ffff, #00ffff); */
     border-radius: 0.5em;
+}
+
+.frontContainer{
+    /* position: relative; */
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
 }
 
 .back{
     transform: rotateY(180deg);
     background: cyan;
     border-radius: 0.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.characterImg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 0.5em;
+    object-fit: cover;
+}
+
+.logo{
+    margin: auto;
+    width: 90%;
+    height: auto;
+
+}
+
+.characterName{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0px;
+    font-size: 1.5em;
+    color: rgba(13, 14, 75, 0.938);
+    background-color: aliceblue;
+    padding: 3px 10px 3px 10px;
+    border-radius: 0 0.5em 0 0.5em;
 }
