--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,22 +1,20 @@
-.scene{
+.scene {
     height: 200px;
     width: 150px;
     perspective: 10000px;
     margin: 10px;
 }
 
-
-
 .card {
     position: relative;
     height: 100%;
     width: 100%;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     border-radius: 0.5em;
     transition: transform 1s;
     transform-style: preserve-3d;
 }
-.card.flipped{
+.card.flipped {
     transform: rotateY(180deg);
 }
 .cardFace {
@@ -30,7 +28,7 @@
     border-color: rgb(184, 184, 184);
 }
 
-.front{
+.front {
     background: rgb(240, 248, 250);
     /* linear-gradient(45deg,#80ffff, #00ffff, #00ffff); */
     border-radius: 10px;
@@ -39,7 +37,7 @@
     backface-visibility: hidden;
 }
 
-.frontContainer{
+.frontContainer {
     /* position: relative; */
     width: 100%;
     height: 100%;
@@ -49,7 +47,7 @@
     backface-visibility: hidden;
 }
 
-.back{
+.back {
     transform: rotateY(180deg);
     border-radius: 10px;
     display: flex;
@@ -58,7 +56,7 @@
     background: rgb(240, 248, 250);
 }
 
-.characterImg{
+.characterImg {
     position: absolute;
     top: 0;
     left: 0;
@@ -71,14 +69,13 @@
     backface-visibility: hidden;
 }
 
-.logo{
+.logo {
     margin: auto;
     width: 90%;
     height: auto;
-
 }
 
-.characterName{
+.characterName {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -99,33 +96,30 @@
     text-overflow: ellipsis;
 }
 
-
 @media screen and (max-width: 710px) {
-    .scene{
-        height: 100px;
-        width: 75px;
+    .scene {
+        height: 144px;
+        width: 102px;
         perspective: 600px;
         margin: 10px;
     }
 
-    .characterName{
+    .characterName {
         font-size: 0.5em;
         max-width: 60%;
     }
-    
 }
 
 @media screen and (max-width: 330px) {
-    .scene{
+    .scene {
         height: 80px;
         width: 60px;
         perspective: 600px;
         margin: 10px;
     }
 
-    .characterName{
+    .characterName {
         font-size: 0.5em;
         max-width: 60%;
     }
-    
 }
