--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -10,3 +10,12 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.showSheetButton {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    height: 4rem;
+}
