button styling, need to change layout of sheet content

--- a/src/Components/PlayerCardArea/PlayerCardArea.css
+++ b/src/Components/PlayerCardArea/PlayerCardArea.css
@@ -8,3 +8,43 @@
 .playerCardLabel {
     margin-block-end: 0;
 }
+
+.optionButton {
+    width: 100%;
+    margin-top: 10px;
+    border-width: 0;
+    transition-duration: 0.4s;
+    height: 3rem;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.optionButton:hover {
+    box-shadow: 0 12px 160px 0 rgba(0, 0, 0, 0.24),
+        0 17px 50px -15px rgba(0, 0, 0, 0.19);
+}
+
+#cardResetButton {
+    background: rgb(0, 122, 255);
+}
+
+#cardResetButton:hover {
+    background: rgb(12, 130, 255);
+}
+
+#boardResetButton {
+    background: rgb(0, 122, 255);
+}
+
+#boardResetButton:hover {
+    background: rgb(12, 130, 255);
+}
+
+#boardMenuButton {
+    background: rgba(13, 14, 75, 0.938);
+}
+
+#boardMenuButton:hover {
+    background: rgba(46, 46, 102, 0.938);
+}
