--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -14,8 +14,26 @@
 .showSheetButton {
     position: fixed;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 1%;
+    width: 98%;
     z-index: 1;
     height: 4rem;
+    border-radius: 16px 16px 0 0;
+    border-width: 0;
+    background: rgb(0, 122, 255);
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    font-weight: bold;
+}
+
+.showSheetButton:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+        0 -17px 100px -5px rgba(0, 0, 0, 0.19);
+    width: 99%;
+    left: 0.5%;
+    background: rgb(12, 130, 255);
 }
